# website

./: .gitattributes  .gitignore  LICENSE  README.md  clean.sh  deployment.yaml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: main.yml
.husky/: pre-commit
backend/: .gitignore  Dockerfile  go.mod  go.sum  install.sql  main.go  readme.md  settings.yaml
backend/api/: admin.go  article.go  comment.go  image.go  index.go  message.go  settings.go  user.go
backend/config/: index.go  logger.go  mysql.go  system.go
backend/core/: config.go  gorm.go  logrus.go  redis.go
backend/global/: global.go
backend/model/: article.go  comment.go  image.go  message.go  response.go  user.go
backend/router/: admin.go  article.go  comment.go  image.go  index.go  message.go  settings.go  user.go
backend/service/: admin.go  article.go  comment.go  image.go  images.go  message.go  token.go  user.go
database/: Dockerfile  README.md
docs/: README.md  deploy.md
documents/: README.md  server.md  web.md
frontend/: .gitignore  Dockerfile  README.md  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
fullstack/: .env  Dockerfile  README.md  package-lock.json  package.json
middleware/: Dockerfile  nginx-http.conf  nginx.conf
mysql/: Dockerfile  README.md  init.sql
nextjs/: .env  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
nginx/: Dockerfile  README.md  nginx-http.conf  nginx-service.conf  nginx.conf
scripts/: backup.sh  clean.sh  restart.sh  start.sh
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  init.sql  main.go  settings.yaml
server/api/: article.go  comment.go  conversation.go  image.go  message.go  user.go
server/config/: logger.go  mysql.go  redis.go  system.go
server/core/: config.go  logrus.go  mysql.go  redis.go
server/global/: global.go
server/model/: article.go  comment.go  conversation.go  image.go  message.go  response.go  user.go
server/router/: article.go  comment.go  conversation.go  image.go  index.go  message.go  user.go
server/service/: article.go  captcha.go  comment.go  conversation.go  email.go  images.go  message.go  token.go  user.go
server/src/: main.rs
server/src/controllers/: auth.rs  blog.rs  board.rs  comment.rs  mod.rs  photo.rs  picture.rs  tag.rs  user.rs
server/src/core/: env.rs  journal.rs  jwt.rs  mail.rs  mod.rs  postgres.rs  redis.rs  serde.rs
server/src/handlers/: auth.rs  blog.rs  category.rs  image.rs  mod.rs  photo.rs  picture.rs  tag.rs  user.rs
server/src/models/: auth.rs  blog.rs  blog_tag.rs  board.rs  category.rs  comment.rs  image.rs  mod.rs  photo.rs  picture.rs  response.rs  tag.rs  user.rs
server/src/routers/: auth.rs  blog.rs  board.rs  category.rs  comment.rs  image.rs  mod.rs  photo.rs  picture.rs  tag.rs  user.rs
server/src/services/: auth.rs  blog.rs  board.rs  comment.rs  mod.rs  photo.rs  picture.rs  tag.rs  user.rs
springboot/: pom.xml  readme.md
tools/: README.md  webhook.py
web/: .env  .gitignore  Dockerfile  README.md  eslint.config.mjs  jest.config.ts  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  rsbuild.config.ts  start.sh  tailwind.config.js  tsconfig.json  webpack.config.js
webmaster/: .env  README.md  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
(+459 files in other folders)
