[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"
deadpool-redis = "0.20.0"
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
tracing-appender = "0.2.3"
chrono = "0.4.40"
dotenvy = "0.15.7"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.14", features = ["builder", "smtp-transport", "tokio1-native-tls"] }
rand = "0.9.0"
serde_json = "1.0.140"
once_cell = "1.20.3"
regex = "1.11.1"
